.fb_reset & iframe dialog line-height fix
Summary:
Adds .fb_reset and applies it to #fb-root. Also, I noticed there was a
small gap below iframes in dialogs which was caused because iframes are
inline elements and hence affected by line-height. This was noticable
in all browsers. Added a fix for that too. I should probably move this
fix into the dialog diff.

Task ID: #

Blame Rev:

Reviewed By: lshepard

CC: platform-diffs@lists.facebook.com

Test Plan: Made sure the visible gap below iframes is gone. .fb_reset is
defensive in nature, so only tested that it gets applied.

Revert Plan:

Tags:

Database Impact:

Memcache Impact:

Other Notes:

EImportant:

- begin *PUBLIC* platform impact section -
Bugzilla: #
- end platform impact -

DiffCamp Revision: 94181

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,3 +22,30 @@
   top: -10000px;
   z-index: 10001;
 }
+
+.fb_reset {
+  background: none;
+  border-spacing: 0;
+  border: 0px;
+  color: #000;
+  cursor: auto;
+  direction: ltr;
+  font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
+  font-size: 11px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 1;
+  margin: 0;
+  overflow: visible;
+  padding: 0;
+  text-align: left;
+  text-decoration: none;
+  text-indent: 0;
+  text-shadow: none;
+  text-transform: none;
+  visibility: visible;
+  white-space: normal;
+  word-spacing: normal;
+}
